--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "core-js": "^3.15.1",
+    "eslint": "^8.14.0",
     "nuxt": "^2.15.7",
-    "vuetify": "^2.5.5"
+    "vuetify": "^2.5.5",
+    "xx-vue-owl-carousel": "^1.1.9"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.12.1"
